# xboing-c

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .markdownlint-cli2.jsonc  .markdownlint.json  .quarryignore  AGENTS.md  CLAUDE-c-game.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  COPYRIGHT  LICENSE  Makefile  README.md  audio.c  ball.c  ball_math.c  blocks.c  bonus.c  demo.c  dev-loop.md  dialogue.c  editor.c  error.c  eyedude.c  fifo_temp  file.c  gun.c  highscore.c  init.c  inst.c  intro.c  keys.c  keysedit.c  level.c  main.c  mess.c  misc.c  (+10 more)
.beads/: config.yaml  issues.jsonl  metadata.json
.claude/: settings.json
.claude-flow/: .trend-cache.json  CAPABILITIES.md  config.yaml
.claude-flow/metrics/: learning.json  swarm-activity.json  v3-progress.json
.claude-flow/security/: audit-status.json
.claude/agents/: av-platform-expert.md  c-modernization-expert.md  gjm.md  jck.md  jdc.md  sjl.md  test-expert.md  xboing-author.md
.claude/rules/: c-code.md  ci.md  claude-md.md  delegation.md  makefile.md  markdown.md  scripts.md  tests.md
.ethos/: missions.jsonl
.github/: CLAUDE.md
.github/workflows/: copilot-review.yml  docs.yml  lint.yml  test.yml
.punt-labs/: ethos.yaml
.punt-labs/ethos/: missions.jsonl
assets/fonts/: LICENSE
audio/: ALSAaudio.c  LINUXaudio.c
debian/: changelog  control  copyright  rules  xboing.postinst  xboing.postrm
docs/: ARCHITECTURE_LEGACY.tex  ARCHITECTURE_MODERN.tex  BUILDING.md  DESIGN.md  GIT.md  INTEGRATION_ROADMAP.md  MODERNIZATION.md  SPECIFICATION.md  TESTING.md  WORKFLOW.md  bullet_ammo.tex
docs/audits/: 2026-06-28-audio-volume-modulation.md  2026-07-11-editor-parity.md  2026-07-13-gameplay-logic-parity.md  2026-07-14-animation-cadence-parity.md  2026-07-14-key-command-parity.md  2026-07-14-sfx-parity.md
docs/development/: CLION.md
docs/research/: 2026-04-27-original-directory-semantics.md  2026-05-01-ball-tunneling-investigation.md  2026-05-01-gun-firing-gating-investigation.md  2026-05-01-reverse-persistence-investigation.md  2026-05-01-skull-collision-investigation.md  2026-05-01-specials-panel-original-reference.md  2026-05-02-block-explosion.md  2026-05-02-bonus-screen.md  2026-05-02-gun-feature-comprehensive-reference.md  2026-05-02-visual-fidelity-audit-pass2.md  2026-05-02-visual-fidelity-audit.md  2026-05-03-visual-fidelity-screenshot-testing.md  2026-05-08-llm-comparison-slice-findings.md  2026-05-25-visual-capture-reflection.md  2026-05-26-dialogue-system.md  2026-06-06-bonus-capture-real-entry.md  2026-06-27-warp-speed-modern.md  2026-06-27-warp-speed-original.md  2026-07-16-frame-tick-calibration.md
docs/reviews/: 2026-04-27-path-api-read-write-split-review.md  2026-04-27-post-merge-93-cleanup-review.md  2026-05-01-dogfood-fixes-spec-review.md  2026-05-01-investigation-contracts-batch-review.md  2026-05-01-specials-fix-spec-review.md  2026-05-01-specials-research-spec-review.md  2026-05-02-basket1-block-animation-frames-spec-review.md  2026-05-02-basket2-block-composites-spec-review.md  2026-05-02-basket3-block-explosion-spec-review.md  2026-05-02-gun-feature-implement-spec-review.md  2026-05-02-gun-feature-research-spec-review.md  2026-05-03-screenshot-methodology-gjm-review.md  (+8 more)
include/: ball.h  ball_math.h  ball_system.h  ball_types.h  block_sound.h  block_system.h  block_types.h  blocks.h  bonus.h  bonus_system.h  config_io.h  demo.h  demo_system.h  dialogue.h  dialogue_system.h  editor_system.h  error.h  eyedude.h  eyedude_system.h  file.h  game_callbacks.h  game_context.h  game_init.h  game_input.h  game_modes.h  game_render.h  game_render_ui.h  game_rules.h  gun.h  gun_system.h  highscore.h  highscore_io.h  highscore_system.h  init.h  intro_system.h  keys_system.h  level.h  level_system.h  main.h  mess.h  (+30 more)
original/: CLAUDE.md  COPYRIGHT  Makefile  bonus.c  demo.c  editor.c  eyedude.c  file.c  gun.c  highscore.c  init.c  inst.c  keys.c  keysedit.c  level.c  main.c  mess.c  misc.c  paddle.c  presents.c  score.c  sfx.c  special.c  stage.c  test_blocks.c  test_level_parse.c  test_save_load.c  test_state_machine.c
packaging/: com.github.xboing.metainfo.xml  xboing.desktop
scripts/: CLAUDE.md  audio-literals-check.sh  audio-literals.sh  capture_modern_one.sh  capture_original.sh  convert_au_to_wav.sh  convert_xpm_to_png.sh  gen_cursors.py  llm_compare.py  run-headless.sh  run-integration-tests.sh  verify_png_conversion.sh  visual_capture.sh  visual_check.py
src/: CLAUDE.md  ball_math.c  ball_system.c  block_sound.c  block_system.c  bonus_system.c  config_io.c  demo_system.c  dialogue_system.c  editor_system.c  eyedude_system.c  game_callbacks.c  game_init.c  game_input.c  game_main.c  game_modes.c  game_render.c  game_render_ui.c  game_rules.c  gun_system.c  highscore_io.c  highscore_system.c  intro_system.c  keys_system.c  level_system.c  message_system.c  paddle_system.c  parse_util.c  paths.c  presents_system.c  savegame_io.c  savegame_system.c  score_logic.c  score_system.c  sdl2_audio.c  sdl2_cli.c  sdl2_color.c  sdl2_cursor.c  sdl2_cursor_bitmaps.h  sdl2_font.c  (+10 more)
tests/: CLAUDE.md  CMakeLists.txt  fuzz_config_io.c  fuzz_highscore_io.c  fuzz_level_parse.c  fuzz_savegame_io.c  stubs_x11_xboing.c  test_attract_screenshots.c  test_audio_name_validation.c  test_ball_math.c  test_ball_system.c  test_block_check_region.c  test_block_sound.c  test_block_system.c  test_block_system_check_region.c  test_block_system_explosion.c  test_blocks.c  test_bonus_system.c  test_config_io.c  test_demo_system.c  test_dialogue_system.c  test_editor_roundtrip.c  test_editor_system.c  test_eyedude_system.c  test_game_callbacks.c  test_game_render_geometry.c  test_game_render_specials.c  test_game_rules.c  test_golden_attract.c  test_gun_system.c  test_highscore_io.c  test_highscore_system.c  test_integration_all_levels.c  test_integration_autocycle.c  test_integration_editor.c  test_integration_gameplay.c  test_integration_modes.c  test_integration_smoke.c  test_intro_system.c  test_keybindings.c  (+34 more)
tests/golden/: regions.h
tests/golden/original/: README.md
tools/: CLAUDE.md  gen_bonus_fixtures.c
(+358 files in other folders)
